<resources>
    <string name="app_name">Movie App</string>
    <string name="movie_banner">Movie Banner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back Button</string>
    <string name="details">Details</string>
    <string name="year">Year</string>
    <string name="action">Action</string>
</resources>