<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_light_primary"
        tools:context=".ui.MovieDetailsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clToolbar"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/ivBannerImage"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:contentDescription="@string/movie_banner"
            android:scaleType="fitXY"
            android:src="@drawable/no_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clToolbar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSmallImage"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginStart="15dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@id/ivBannerImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBannerImage"
            app:layout_constraintVertical_bias="1.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivSmallImage"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/movie_banner"
                    android:scaleType="fitXY"
                    android:src="@drawable/no_image_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="Movie Title"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvSmallImage"
            app:layout_constraintTop_toBottomOf="@id/ivBannerImage" />

        <TextView
            android:id="@+id/tvOtherDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Date - Genres - Duration"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/tvMovieTitle"
            app:layout_constraintStart_toStartOf="@id/tvMovieTitle"
            app:layout_constraintTop_toBottomOf="@id/tvMovieTitle" />

        <TextView
            android:background="@color/white"
            android:id="@+id/btnTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="Watch Trailer"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/tvOtherDetails"
            app:layout_constraintTop_toBottomOf="@id/tvOtherDetails"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@id/tvOtherDetails"
            app:layout_constraintStart_toStartOf="@id/cvSmallImage"
            app:layout_constraintTop_toBottomOf="@id/btnTrailer">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/year"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_calendar"
                app:layout_constraintEnd_toStartOf="@id/tvGenres"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvGenres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="10dp"
                android:text="@string/action"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_movie"
                app:layout_constraintEnd_toStartOf="@id/tvDuration"
                app:layout_constraintStart_toEndOf="@id/tvDate"
                app:layout_constraintTop_toTopOf="@id/tvDate" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="10dp"
                android:text="00:00:00:00"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvGenres"
                app:layout_constraintTop_toTopOf="@id/tvGenres" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/my_light_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clDetails"
            app:tabGravity="fill"
            app:tabIndicatorColor="@android:color/white"
            app:tabIndicatorHeight="4dp"
            app:tabMode="fixed"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpDescription"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tlCategory"
            app:layout_constraintStart_toStartOf="@id/tlCategory"
            app:layout_constraintTop_toBottomOf="@id/tlCategory" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>